src/objects/PB_DocPacket__c.object
<CustomObject>
    <fields>
        <fullName>Default_Admission_Packet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The packet&apos;s that are marked default, all the documents from them are added to the admission on the admission creation.</description>
        <inlineHelpText>The packet&apos;s that are marked default, all the documents from them are added to the admission on the admission creation.</inlineHelpText>
        <label>Default Admission Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Packet_Name__c</fullName>
        <label>Packet Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PB_DocPacket</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PB_DocPackets</pluralLabel>
    <recordTypes>
        <fullName>ABI</fullName>
        <active>true</active>
        <description>This recordtype is used to support ABI network</description>
        <label>ABI</label>
    </recordTypes>
    <recordTypes>
        <fullName>ARY</fullName>
        <active>true</active>
        <description>This recordtype is used to support ARY network</description>
        <label>ARY</label>
    </recordTypes>
    <recordTypes>
        <fullName>ELD</fullName>
        <active>true</active>
        <description>This recordtype is used to support ELD network for ADH.</description>
        <label>ELD</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmployeeTraining</fullName>
        <active>true</active>
        <description>This recordtype is used for employee training tracking</description>
        <label>EmployeeTraining</label>
    </recordTypes>
    <recordTypes>
        <fullName>IDD</fullName>
        <active>true</active>
        <label>IDD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tmn_Provider_Application</fullName>
        <active>true</active>
        <label>Tmn Provider Application</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>